--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <div class="MainContainer" id="mainContainer">
-    <div class="BrownBlock"></div>
-    <div class="YellowBlock"></div>
+
+<!--    <div class="BrownBlock"></div>-->
+<!--    <div class="YellowBlock"></div>-->
 </div>
 
 
