bunch of images for pins and added conveyor for sun

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
 <!--    <div class="BrownBlock"></div>-->
 <!--    <div class="YellowBlock"></div>-->
 </div>
+<div class="Conveyor" id="Conveyor"></div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
