--- a/pages/Shutter.html
+++ b/pages/Shutter.html
@@ -3,18 +3,20 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="stylesheets/Props.css">
+    <link rel="stylesheet" href="../stylesheets/Blinds.css">
     <title>Title</title>
 </head>
 <body>
-<div class="MainContainer" id="mainContainer">
-
-</div>
-<div class="Conveyor" id="Conveyor"></div>
+<canvas id="canvas"></canvas>
+<div id="megaBox1"></div>
+<div id="megaBox2"></div>
+<div id="megaBox3"></div>
+<div id="megaBox4"></div>
+<div id="forward">Forwards</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-<script src="scripts/Main.js" type="module"></script>
+<script src="../scripts/shutter.js" type="module"></script>
 </body>
 </html>
