--- a/pages/Shutter.html
+++ b/pages/Shutter.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <canvas id="canvas"></canvas>
+<div id="megaBox0"></div>
 <div id="megaBox1"></div>
 <div id="megaBox2"></div>
 <div id="megaBox3"></div>
-<div id="megaBox4"></div>
+<div id="backward">Backwards</div>
 <div id="forward">Forwards</div>
 
 
