buttons, and perpendicular blinds

--- a/pages/Shutter.html
+++ b/pages/Shutter.html
@@ -7,13 +7,22 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<canvas id="canvasVertical"></canvas>
+<canvas id="canvasHorizontal"></canvas>
 <div id="megaBox0"></div>
 <div id="megaBox1"></div>
 <div id="megaBox2"></div>
 <div id="megaBox3"></div>
-<div id="backward">Backwards</div>
-<div id="forward">Forwards</div>
+
+<div id="nav">
+    <button id="indent0"></button>
+    <button id="indent1"></button>
+    <button id="indent2"></button>
+    <button id="indent3"></button>
+</div>
+
+<!--<div id="backward">Backwards</div>-->
+<!--<div id="forward">Forwards</div>-->
 
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
