--- a/Index.html
+++ b/Index.html
@@ -3,18 +3,18 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="stylesheets/Props.css">
+    <link rel="stylesheet" href="stylesheets/Index.css">
     <title>Title</title>
 </head>
 <body>
-<div class="MainContainer" id="mainContainer">
 
+<div class="projects">
+    <div id="project0">space</div>
+    <div id="project1">blinds</div>
+    <div id="project2">workinprogress</div>
 </div>
-<div class="Conveyor" id="Conveyor"></div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-<script src="scripts/Main.js" type="module"></script>
+<script src="scripts/index.js" type="module"></script>
+<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
 </body>
 </html>
