--- a/pages/Shutter.html
+++ b/pages/Shutter.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../stylesheets/Blinds.css">
-    <title>Title</title>
+    <title>Blinds</title>
 </head>
 <body>
 <canvas id="canvasVertical"></canvas>
