--- a/pages/Psuedoparra.html
+++ b/pages/Psuedoparra.html
@@ -7,9 +7,12 @@
     <title>Title</title>
 </head>
 <body>
+<div id="mainContainer">
+
+</div>
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.2.0/svg.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 <script src="../scripts/psuedo.js" type="module"></script>
