--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -8,13 +8,37 @@
 </head>
 <body>
 <div id="mainContainer">
-    <div id="someDiv"></div>
+<!--    <div id="someDiv"></div>-->
+</div>
+<div id="hid">
+    <div class="vignette" id="mainContainerHid">
+        <div class="ImageOfMe">
+            <div id="imgme"></div>
+            <div class="Intro">
+                <br/>
+                <p id="headerP">Hey! I'm Hector Colon, a dedicated and creative web designer specializing in <strong style="text-decoration: underline black">front-end development</strong>.</p>
 
+                <p>
+                    With a keen eye for design and a strong commitment to delivering exceptional user experiences,
+                    I craft websites that are not only visually appealing but also <strong style="text-decoration: underline black">highly functional and scalable</strong>.
+                </p>
+                <br/>
+                <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
+                <div class="nav">
+                    <div class="NavBar">
+                        <div class="button">Skills</div>
+                        <div class="button">Projects</div>
+                        <div class="button">Contact</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.2.0/svg.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 <script src="../scripts/playGround.js" type="module"></script>
