before i start working alot of the mega code

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -26,9 +26,9 @@
                 <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
                 <div class="nav">
                     <div class="NavBar">
-                        <div class="button">Skills</div>
-                        <div class="button">Projects</div>
-                        <div class="button">Contact</div>
+                        <div class="button" id="introSkills">Skills</div>
+                        <div class="button" id="introProjects">Projects</div>
+                        <div class="button" id="introContact">Contact</div>
                     </div>
                 </div>
             </div>
