--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -7,11 +7,11 @@
     <title>Title</title>
 </head>
 <body>
-<div id="mainContainer">
+<div class="vignette" id="mainContainer">
 <!--    <div id="someDiv"></div>-->
 </div>
-<div id="hid">
-    <div class="vignette" id="mainContainerHid">
+<div id="layer0">
+    <div  id="mainContainerHid">
         <div class="ImageOfMe">
             <div id="imgme"></div>
             <div class="Intro">
@@ -35,10 +35,13 @@
         </div>
     </div>
 </div>
+<div id="layer1"></div>
+<div id="layer2"></div>
+<div id="layer3"></div>
+
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.2.0/svg.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 <script src="../scripts/playGround.js" type="module"></script>
