added new page and working on isanimating timers

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -8,39 +8,71 @@
 </head>
 <body>
 <div class="vignette" id="mainContainer">
-<!--    <div id="someDiv"></div>-->
-</div>
-<div id="layer0">
-    <div  id="mainContainerHid">
-        <div class="ImageOfMe">
-            <div id="imgme"></div>
-            <div class="Intro">
-                <br/>
-                <p id="headerP">Hey! I'm Hector Colon, a dedicated and creative web designer specializing in <strong style="text-decoration: underline black">front-end development</strong>.</p>
+    <div id="layer0">
+        <div  id="mainContainerHid">
+            <div class="ImageOfMe">
+                <div id="imgme"></div>
+                <div class="Intro">
+                    <br/>
+                    <p id="headerP">Hey! I'm Hector Colon, a dedicated and creative web designer specializing in <strong style="text-decoration: underline black">front-end development</strong>.</p>
 
-                <p>
-                    With a keen eye for design and a strong commitment to delivering exceptional user experiences,
-                    I craft websites that are not only visually appealing but also <strong style="text-decoration: underline black">highly functional and scalable</strong>.
-                </p>
-                <br/>
-                <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
+                    <p>
+                        With a keen eye for design and a strong commitment to delivering exceptional user experiences,
+                        I craft websites that are not only visually appealing but also <strong style="text-decoration: underline black">highly functional and scalable</strong>.
+                    </p>
+
+                    <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
+                    <div class="nav">
+                        <div class="NavBar">
+                            <div class="button" id="introSkills">Skills</div>
+                            <div class="button" id="introProjects">Projects</div>
+                            <div class="button" id="introContact">Contact</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div id="layer1">
+        <div id="mainContainerLayer1">
+            <strong>Here Is What I Come With</strong>
+            <div class="skillsContainer">
+                <div class="skills">
+                    <div class="skillsImages">
+                        <div id="html"></div>
+                        <div id="css"></div>
+                        <div id="javascript"></div>
+                    </div>
+                    <div class="skillsDemos">
+                        <div id="htmlDemo"></div>
+                        <div id="cssDemo"></div>
+                        <div id="javascriptDemo"></div>
+                    </div>
+                </div>
+                <div class="library"></div>
                 <div class="nav">
                     <div class="NavBar">
-                        <div class="button" id="introSkills">Skills</div>
-                        <div class="button" id="introProjects">Projects</div>
-                        <div class="button" id="introContact">Contact</div>
+                        <div class="button">Home</div>
+                        <div class="button">Projects</div>
+                        <div class="button">Contact</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div id="layer1"></div>
-<div id="layer2"></div>
+<div id="layer2">
+
+</div>
 <div id="layer3"></div>
 
 
 
+<footer>
+
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.2.0/svg.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
