--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -8,24 +8,26 @@
 </head>
 <body>
 <div class="vignette" id="mainContainer">
-    <div class="ImageOfMe">
-        <div id="imgme"></div>
-        <div class="Intro">
-            <br/>
-            <p id="headerP">Hey! I'm Hector Colon, a dedicated and creative web designer specializing in <strong style="text-decoration: underline black">front-end development</strong>.</p>
-
-            <p>
-                With a keen eye for design and a strong commitment to delivering exceptional user experiences,
-                I craft websites that are not only visually appealing but also <strong style="text-decoration: underline black">highly functional and scalable</strong>.
-            </p>
-            <br/>
-            <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
-            <div class="nav">
-                <div class="NavBar">
-                    <div class="button">Skills</div>
-                    <div class="button">Projects</div>
-                    <div class="button">Contact</div>
-                </div>
+    <strong style="padding-top: 5%; font-size: xx-large">What I Come With</strong>
+    <div class="skillsContainer">
+        <div class="skills">
+            <div class="skillsImages">
+                <div id="html"></div>
+                <div id="css"></div>
+                <div id="javascript"></div>
+            </div>
+            <div class="skillsDemos">
+                <div id="htmlDemo"></div>
+                <div id="cssDemo"></div>
+                <div id="javascriptDemo"></div>
+            </div>
+        </div>
+        <div class="library"></div>
+        <div class="nav">
+            <div class="NavBar">
+                <div class="button"></div>
+                <div class="button"></div>
+                <div class="button"></div>
             </div>
         </div>
     </div>
