alot of bug fixes and started working on projects page. included a 4 second lockout on pgae navigation as to let the animations to catch up.

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -36,7 +36,7 @@
     </div>
     <div id="layer1">
         <div id="mainContainerLayer1">
-            <strong>Here Is What I Come With</strong>
+            <h2>Here Is What I Come With</h2>
             <div class="skillsContainer">
                 <div class="skills">
                     <div class="skillsImages">
@@ -49,8 +49,14 @@
                         <div id="cssDemo"></div>
                         <div id="javascriptDemo"></div>
                     </div>
+                    <p> I am also <strong>proficient</strong> in</p>
+                    <div class="library">
+                        <div class="libraryLogo" id="nodeJS"></div>
+                        <div class="libraryLogo" id="react"></div>
+                        <div class="libraryLogo" id="jquery"></div>
+                    </div>
+
                 </div>
-                <div class="library"></div>
                 <div class="nav">
                     <div class="NavBar">
                         <div class="button">Home</div>
