started working on projects page, located at workshop.html

--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -8,7 +8,32 @@
 </head>
 <body>
 <div class="vignette" id="mainContainer">
-
+    <div id="layer2">
+        <div id="mainContainerLayer2">
+            <div class="projectsContainer">
+                <h1> Take a look at some of my Projects.</h1>
+                <div class="projects">
+                    <div class="projectsHolder" id="projectsHolderLeft">
+                        <div class="projectDemo" id="PDemo0"></div>
+                        <div class="projectDemo" id="PDemo1"></div>
+                        <div class="projectDemo" id="PDemo2"></div>
+                    </div>
+                    <div class="projectsHolder" id="projectsHolderRight">
+                        <div class="projectDemo" id="PDemo3"></div>
+                        <div class="projectDemo" id="PDemo4"></div>
+                        <div class="projectDemo" id="PDemo5"></div>
+                    </div>
+                </div>
+                <div class="nav">
+                    <div class="NavBar">
+                        <div class="button" id="projectHome">Home</div>
+                        <div class="button" id="projectsSkills">Skills</div>
+                        <div class="button" id="projectContact">Contact</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
