was working on project section. included background more bug fixes. got a good transition working for projects demos.

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -14,11 +14,11 @@
                 <div id="imgme"></div>
                 <div class="Intro">
                     <br/>
-                    <p id="headerP">Hey! I'm Hector Colon, a dedicated and creative web designer specializing in <strong style="text-decoration: underline black">front-end development</strong>.</p>
+                    <h1>Hey! I'm Hector Colon, a dedicated and creative web designer specializing in <strong style="text-decoration: underline white">front-end development</strong>.</h1>
 
                     <p>
                         With a keen eye for design and a strong commitment to delivering exceptional user experiences,
-                        I craft websites that are not only visually appealing but also <strong style="text-decoration: underline black">highly functional and scalable</strong>.
+                        I craft websites that are not only visually appealing but also <strong style="text-decoration: underline white">highly functional and scalable</strong>.
                     </p>
 
                     <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
@@ -67,9 +67,32 @@
             </div>
         </div>
     </div>
-</div>
-<div id="layer2">
+    <div id="layer2">
+        <div id="mainContainerLayer2">
+            <div class="projectsContainer">
+                <h1> Take a look at some of my Projects.</h1>
+                <div class="projects">
+                    <div class="projectsHolder" id="projectsHolder">
+                        <div class="projectDemo" id="PDemo0"></div>
+                        <div class="projectDemo" id="PDemo1"></div>
+                        <div class="projectDemo" id="PDemo2"></div>
+                        <div class="projectDemo" id="PDemo3"></div>
+                        <div class="projectDemo" id="PDemo4"></div>
+                        <div class="projectDemo" id="PDemo5"></div>
+                    </div>
+                    <div id="layer2dropdown"></div>
 
+                </div>
+                <div class="nav">
+                    <div class="NavBar">
+                        <div class="button" id="projectHome">Home</div>
+                        <div class="button" id="projectsSkills">Skills</div>
+                        <div class="button" id="projectContact">Contact</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div id="layer3"></div>
 
