added pin animation, working on smoothing.

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -80,7 +80,10 @@
                         <div class="projectDemo" id="PDemo4"></div>
                         <div class="projectDemo" id="PDemo5"></div>
                     </div>
-                    <div id="layer2dropdown"></div>
+                    <div id="layer2dropdown">
+                        <div class="line" id="line0"></div>
+                        <div class="line" id="line1"></div>
+                    </div>
 
                 </div>
                 <div class="nav">
