changes to projects page, right before i remove // if (lastClickedPreview) {                                                         //     if (element === lastClickedPreview[0]) {                                                         //         // reversePreviewAnimations(lastClickedPreview, true)                                                         //         // lastClickedPreview = null;                                                         //         return                                                         //     }                                                         // }

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -14,7 +14,7 @@
                 <div id="imgme"></div>
                 <div class="Intro">
                     <br/>
-                    <h1>Hey! I'm Hector Colon, a dedicated and creative web designer specializing in <strong style="text-decoration: underline white">front-end development</strong>.</h1>
+                    <h1>Hey! I'm Hector Colon, a dedicated and creative web design student specializing in <strong style="text-decoration: underline white">front-end development</strong>.</h1>
 
                     <p>
                         With a keen eye for design and a strong commitment to delivering exceptional user experiences,
@@ -24,9 +24,15 @@
                     <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
                     <div class="nav">
                         <div class="NavBar">
-                            <div class="button" id="introSkills">Skills</div>
-                            <div class="button" id="introProjects">Projects</div>
-                            <div class="button" id="introContact">Contact</div>
+                            <div class="buttonWrapper">
+                                <div class="button" id="introSkills">Skills</div>
+                            </div>
+                            <div class="buttonWrapper">
+                                <div class="button" id="introProjects">Projects</div>
+                            </div>
+                            <div class="buttonWrapper">
+                                <div class="button" id="introContact">Contact</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -59,9 +65,15 @@
                 </div>
                 <div class="nav">
                     <div class="NavBar">
-                        <div class="button">Home</div>
-                        <div class="button">Projects</div>
-                        <div class="button">Contact</div>
+                        <div class="buttonWrapper">
+                            <div class="button">Home</div>
+                        </div>
+                        <div class="buttonWrapper">
+                            <div class="button">Projects</div>
+                        </div>
+                        <div class="buttonWrapper">
+                            <div class="button">Contact</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -73,12 +85,42 @@
                 <h1> Take a look at some of my Projects.</h1>
                 <div class="projects">
                     <div class="projectsHolder" id="projectsHolder">
-                        <div class="projectDemo" id="PDemo0"></div>
-                        <div class="projectDemo" id="PDemo1"></div>
-                        <div class="projectDemo" id="PDemo2"></div>
-                        <div class="projectDemo" id="PDemo3"></div>
-                        <div class="projectDemo" id="PDemo4"></div>
-                        <div class="projectDemo" id="PDemo5"></div>
+                        <div class="projectDemo">
+                            <div id="PDemo0"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink0"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo1"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink1"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo2"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink2"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo3"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink3"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo4"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink4"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo5"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink5"></div>
+                            </a>
+                        </div>
                     </div>
                     <div id="layer2dropdown">
                         <div class="line" id="line0"></div>
@@ -88,16 +130,42 @@
                 </div>
                 <div class="nav">
                     <div class="NavBar">
-                        <div class="button" id="projectHome">Home</div>
-                        <div class="button" id="projectsSkills">Skills</div>
-                        <div class="button" id="projectContact">Contact</div>
+                        <div class="buttonWrapper">
+                            <div class="button" id="projectHome">Home</div>
+                        </div>
+                        <div class="buttonWrapper">
+                            <div class="button" id="projectsSkills">Skills</div>
+                        </div>
+                        <div class="buttonWrapper">
+                            <div class="button" id="projectContact">Contact</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="layer3">
+        <div class="mainContainerLayer3" id="mainContainerLayer3">
+            <div id="socials">
+                <div id="imageColumn"></div>
+                <div id="linkColum"></div>
+            </div>
+            <div class="nav">
+                <div class="NavBar">
+                    <div class="buttonWrapper">
+                        <div class="button" id="contactHome">Home</div>
+                    </div>
+                    <div class="buttonWrapper">
+                        <div class="button" id="contactSkills">Skills</div>
+                    </div>
+                    <div class="buttonWrapper">
+                        <div class="button" id="contactProjects">Projects</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div id="layer3"></div>
 
 
 
