bugs fixes and more general improves to projects page

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -83,7 +83,7 @@
         <div id="mainContainerLayer2">
             <div class="projectsContainer">
                 <h1> Take a look at some of my Projects.</h1>
-                <div class="projects">
+                <div class="projects" id="projects">
                     <div class="projectsHolder" id="projectsHolder">
                         <div class="projectDemo">
                             <div id="PDemo0"></div>
