savinbg changes, need tests for laptop resolutions

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -23,14 +23,14 @@
 
                     <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
                     <div class="nav">
-                        <div class="NavBar">
-                            <div class="buttonWrapper">
+                        <div class="NavBar" id="navBarHome">
+                            <div class="buttonWrapper" id="buttonWrapperIntroSkills">
                                 <div class="button" id="introSkills">Skills</div>
                             </div>
-                            <div class="buttonWrapper">
+                            <div class="buttonWrapper" id="buttonWrapperIntroProjects">
                                 <div class="button" id="introProjects">Projects</div>
                             </div>
-                            <div class="buttonWrapper">
+                            <div class="buttonWrapper" id="buttonWrapperIntroContact">
                                 <div class="button" id="introContact">Contact</div>
                             </div>
                         </div>
@@ -42,7 +42,7 @@
     </div>
     <div id="layer1">
         <div id="mainContainerLayer1">
-            <h2>Here Is What I Come With</h2>
+            <h1>Here Is What I Come With</h1>
             <div class="skillsContainer">
                 <div class="skills">
                     <div class="skillsImages">
@@ -64,14 +64,14 @@
 
                 </div>
                 <div class="nav">
-                    <div class="NavBar">
-                        <div class="buttonWrapper">
+                    <div class="NavBar" id="NavBarSkills">
+                        <div class="buttonWrapper" id="buttonWrapperSkillsHome">
                             <div class="button">Home</div>
                         </div>
-                        <div class="buttonWrapper">
+                        <div class="buttonWrapper" id="buttonWrapperSkillsProjects">
                             <div class="button">Projects</div>
                         </div>
-                        <div class="buttonWrapper">
+                        <div class="buttonWrapper" id="buttonWrapperSkillsContact">
                             <div class="button">Contact</div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                         </div>
                         <div class="projectDemo">
                             <div id="PDemo1"></div>
-                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                            <a href="https://codepen.io/mylilhelper123/full/KKJEOqx">
                                 <div class="demoLink" id="demoLink1"></div>
                             </a>
                         </div>
@@ -129,14 +129,14 @@
 
                 </div>
                 <div class="nav">
-                    <div class="NavBar">
-                        <div class="buttonWrapper">
+                    <div class="NavBar" id="NavBarProjects">
+                        <div class="buttonWrapper" id="buttonWrapperProjectHome">
                             <div class="button" id="projectHome">Home</div>
                         </div>
-                        <div class="buttonWrapper">
+                        <div class="buttonWrapper" id="buttonWrapperProjectSkills">
                             <div class="button" id="projectsSkills">Skills</div>
                         </div>
-                        <div class="buttonWrapper">
+                        <div class="buttonWrapper" id="buttonWrapperProjectContact">
                             <div class="button" id="projectContact">Contact</div>
                         </div>
                     </div>
@@ -151,14 +151,14 @@
                 <div id="linkColum"></div>
             </div>
             <div class="nav">
-                <div class="NavBar">
-                    <div class="buttonWrapper">
+                <div class="NavBar" id="NavBarContact">
+                    <div class="buttonWrapper" id="buttonWrapperContactHome">
                         <div class="button" id="contactHome">Home</div>
                     </div>
-                    <div class="buttonWrapper">
+                    <div class="buttonWrapper" id="buttonWrapperContactSkills">
                         <div class="button" id="contactSkills">Skills</div>
                     </div>
-                    <div class="buttonWrapper">
+                    <div class="buttonWrapper" id="buttonWrapperContactProjects">
                         <div class="button" id="contactProjects">Projects</div>
                     </div>
                 </div>
