more bug fixes and now working on contacts page. updated media queries... commit before index.html refactor

--- a/pages/playGround.html
+++ b/pages/playGround.html
@@ -146,8 +146,14 @@
     <div id="layer3">
         <div class="mainContainerLayer3" id="mainContainerLayer3">
             <div id="socials">
-                <div id="imageColumn"></div>
-                <div id="linkColum"></div>
+                <div id="linkedIn">
+                    <div class="socialImg" id="linkInContactImg"></div>
+                    <h1 id="linkInContactLink"> LinkedIn.com</h1>
+                </div>
+                <div id="gitHub">
+                    <div class="socialImg" id="gitHubContactImg"></div>
+                    <h1 id="gitHubContactLink">GitHub.com</h1>
+                </div>
             </div>
             <div class="nav">
                 <div class="NavBar" id="NavBarContact">
