mobile touch not working, in process of debugging

--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylesheets/Index.css">
-    <title>Title</title>
+    <title>Hector Colon's Port</title>
 </head>
 <body>
+<div class="vignette" id="mainContainer">
+    <div id="layer0">
+        <div  id="mainContainerHid">
+            <div class="ImageOfMe">
+                <div id="imgme"></div>
+                <div class="Intro">
+                    <br/>
+                    <h1>Hey! I'm Hector Colon, a dedicated and creative web design student specializing in <strong style="text-decoration: underline white">front-end development</strong>.</h1>
 
-<div class="projects">
-    <div id="project0">space</div>
-    <div id="project1">blinds</div>
-    <div id="project2">workinprogress</div>
+                    <p>
+                        With a keen eye for design and a strong commitment to delivering exceptional user experiences,
+                        I craft websites that are not only visually appealing but also <strong style="text-decoration: underline white">highly functional and scalable</strong>.
+                    </p>
+
+                    <p>Explore my portfolio to see how I blend technical skills with artistic design to create seamless digital experiences.</p>
+                    <div class="nav">
+                        <div class="NavBar" id="navBarHome">
+                            <div class="buttonWrapper" id="buttonWrapperIntroSkills">
+                                <div class="button" id="introSkills">Skills</div>
+                            </div>
+                            <div class="buttonWrapper" id="buttonWrapperIntroProjects">
+                                <div class="button" id="introProjects">Projects</div>
+                            </div>
+                            <div class="buttonWrapper" id="buttonWrapperIntroContact">
+                                <div class="button" id="introContact">Contact</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div id="layer1">
+        <div id="mainContainerLayer1">
+            <h1>Here Is What I Come With</h1>
+            <div class="skillsContainer">
+                <div class="skills">
+                    <div class="skillsImages">
+                        <div id="html"></div>
+                        <div id="css"></div>
+                        <div id="javascript"></div>
+                    </div>
+                    <div class="skillsDemos">
+                        <div id="htmlDemo"></div>
+                        <div id="cssDemo"></div>
+                        <div id="javascriptDemo"></div>
+                    </div>
+                    <p> I am also <strong>proficient</strong> in</p>
+                </div>
+                <div class="library">
+                    <div class="libraryLogo" id="nodeJS"></div>
+                    <div class="libraryLogo" id="react"></div>
+                    <div class="libraryLogo" id="jquery"></div>
+                </div>
+                <div class="nav">
+                    <div class="NavBar" id="NavBarSkills">
+                        <div class="buttonWrapper" id="buttonWrapperSkillsHome">
+                            <div class="button">Home</div>
+                        </div>
+                        <div class="buttonWrapper" id="buttonWrapperSkillsProjects">
+                            <div class="button">Projects</div>
+                        </div>
+                        <div class="buttonWrapper" id="buttonWrapperSkillsContact">
+                            <div class="button">Contact</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="layer2">
+        <div id="mainContainerLayer2">
+            <div class="projectsContainer">
+                <h1> Take a look at some of my Projects.</h1>
+                <div class="projects" id="projects">
+                    <div class="projectsHolder" id="projectsHolder">
+                        <div class="projectDemo">
+                            <div id="PDemo0"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink0"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo1"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/KKJEOqx">
+                                <div class="demoLink" id="demoLink1"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo2"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink2"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo3"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink3"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo4"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink4"></div>
+                            </a>
+                        </div>
+                        <div class="projectDemo">
+                            <div id="PDemo5"></div>
+                            <a href="https://codepen.io/mylilhelper123/full/RwONvOZ">
+                                <div class="demoLink" id="demoLink5"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="layer2dropdown">
+                        <div class="line" id="line0"></div>
+                        <div class="line" id="line1"></div>
+                    </div>
+
+                </div>
+                <div class="nav">
+                    <div class="NavBar" id="NavBarProjects">
+                        <div class="buttonWrapper" id="buttonWrapperProjectHome">
+                            <div class="button" id="projectHome">Home</div>
+                        </div>
+                        <div class="buttonWrapper" id="buttonWrapperProjectSkills">
+                            <div class="button" id="projectsSkills">Skills</div>
+                        </div>
+                        <div class="buttonWrapper" id="buttonWrapperProjectContact">
+                            <div class="button" id="projectContact">Contact</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="layer3">
+        <div class="mainContainerLayer3" id="mainContainerLayer3">
+            <div id="socials">
+                <div id="linkedIn">
+                    <div class="socialImg" id="linkInContactImg"></div>
+                    <h1 id="linkInContactLink"> LinkedIn.com</h1>
+                </div>
+                <div id="gitHub">
+                    <div class="socialImg" id="gitHubContactImg"></div>
+                    <h1 id="gitHubContactLink">GitHub.com</h1>
+                </div>
+            </div>
+            <div class="nav">
+                <div class="NavBar" id="NavBarContact">
+                    <div class="buttonWrapper" id="buttonWrapperContactHome">
+                        <div class="button" id="contactHome">Home</div>
+                    </div>
+                    <div class="buttonWrapper" id="buttonWrapperContactSkills">
+                        <div class="button" id="contactSkills">Skills</div>
+                    </div>
+                    <div class="buttonWrapper" id="buttonWrapperContactProjects">
+                        <div class="button" id="contactProjects">Projects</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<script src="scripts/index.js" type="module"></script>
-<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
+
+
+<footer>
+
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.2.0/svg.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+<script src="scripts/Index.js" type="module"></script>
 </body>
+
 </html>
