--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
                     <div class="IntroWrapper">
                         <br/>
                         <h1>Hey! I'm Hector Colon, a dedicated and creative web design student specializing in <strong>front-end development</strong>.</h1>
-                        <br/>
+
                         <p style="text-indent: 2em">
                             With a keen eye for design and a strong commitment to delivering exceptional user experiences,
                             I craft websites that are not only visually appealing but also <strong>highly functional and scalable</strong>.
@@ -167,7 +167,9 @@
                 </div>
                 <div id="google">
                     <div class="socialImg" id="googleContactImg"></div>
+                    <a href="https://mail.google.com">
                         <h1 id="googleContactLink">hector.colon6752@gmail.com</h1>
+                    </a>
                 </div>
             </div>
             <div class="nav">
