--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="images/Logos/basshectorFavicon.png">
     <link rel="stylesheet" href="stylesheets/Index.css">
     <title>Hector Colon's Port</title>
 </head>
