--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="images/Logos/basshectorFavicon.png">
     <link rel="stylesheet" href="stylesheets/Index.css">
-    <title>Hector Colon's Port</title>
+    <title>Hector Colon</title>
 </head>
 <body>
 <div class="vignette" id="mainContainer">
